Fix crossbrowser issue w/ aligning dropdown carets

--- a/src/components/dropdown/dropdown.less
+++ b/src/components/dropdown/dropdown.less
@@ -1,4 +1,5 @@
 .dropdown {
+    display: inline-block;
     position: relative;
 
     &.is-open > .dropdown-menu {
@@ -12,13 +13,14 @@
     display: none;
     float: left;
     font-size: 13px;
-    left: -33px;
+    left: auto;
     list-style: none;
     min-width: 96px;
     padding: 11px 0 8px 0;
     position: absolute;
+    right: -17px;
     text-align: left;
-    top: 8px;
+    top: 100%;
     z-index: 1000;
 
     > .caret:first-child {
