--- a/src/less/modules/btn.less
+++ b/src/less/modules/btn.less
@@ -6,13 +6,16 @@
     display: inline-block;
     text-align: center;
     margin: 0;
-    padding: 0;
+    padding: 0 17px;
+    position: relative;
     line-height: 1;
     white-space: nowrap;
     vertical-align: middle;
 
     .caret {
-        margin-left: 6px;
+        position: absolute;
+        right: 0;
+        // margin-left: 6px;
     }
 
     &.btn-primary {
